--- a/package.json
+++ b/package.json
@@ -29,17 +29,18 @@
     "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.1",
+    "@expo/vector-icons": "^10.0.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
-    "expo": "^32.0.6",
+    "expo": "^35.0.0",
+    "expo-font": "^7.0.0",
     "firebase": "^5.9.2",
     "native-base": "^2.12.1",
     "prop-types": "^15.7.2",
-    "react": "16.5.0",
-    "react-dom": "^16.8.6",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "react-helmet": "^5.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-leaderboard": "^1.0.5",
     "react-native-router-flux": "4.0.6",
     "react-redux": "^6.0.0",
@@ -51,13 +52,13 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1",
+    "babel-preset-expo": "^7.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1",
-    "jest-expo": "^32.0.0",
+    "jest-expo": "^35.0.0",
     "node-sass": "^4.11.0",
     "react-scripts": "2.1.8"
   }
