--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "expo": "^35.0.0",
-    "expo-font": "^7.0.0",
+    "expo-constants": "~7.0.0",
+    "expo-font": "~7.0.0",
+    "expo-location": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "firebase": "^5.9.2",
     "native-base": "^2.12.1",
     "prop-types": "^15.7.2",
@@ -42,6 +45,7 @@
     "react-helmet": "^5.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-leaderboard": "^1.0.5",
+    "react-native-maps": "~0.25.0",
     "react-native-router-flux": "4.0.6",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.2.2",
