--- a/package.json
+++ b/package.json
@@ -29,25 +29,34 @@
     "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.1",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-async-storage/async-storage": "^1.15.2",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
-    "expo": "^32.0.6",
-    "firebase": "^5.9.2",
+    "expo": "^38.0.8",
+    "expo-constants": "^9.1.1",
+    "expo-font": "~8.2.1",
+    "expo-location": "^8.2.1",
+    "expo-permissions": "^9.0.1",
+    "firebase": "^7.9.0",
     "native-base": "^2.12.1",
     "prop-types": "^15.7.2",
-    "react": "16.5.0",
-    "react-dom": "^16.8.6",
+    "react": "16.11.0",
+    "react-dom": "^16.11.0",
     "react-helmet": "^5.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-leaderboard": "^1.0.5",
-    "react-native-router-flux": "4.0.6",
-    "react-redux": "^6.0.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-router-flux": "4.2.0",
+    "react-native-screens": "^2.9.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^4.2.2",
     "react-timer-mixin": "^0.13.4",
     "reactstrap": "^7.1.0",
-    "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
