--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
     "@react-native-async-storage/async-storage": "^1.15.2",
+    "@react-native-community/masked-view": "0.1.10",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "expo": "^38.0.8",
@@ -45,12 +46,13 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "^1.6.0",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-leaderboard": "^1.0.5",
     "react-native-maps": "^0.27.1",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-reanimated": "~1.9.0",
     "react-native-router-flux": "4.2.0",
-    "react-native-screens": "^2.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^4.2.2",
     "react-timer-mixin": "^0.13.4",
